--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">themoviedb</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">TheMovieDB</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_operation">Search movies or tv shows</string>
+    <string name="a_little_empty">A little empty</string>
+    <string name="a_little_empty_details">Search for a movie and \n save it as favourite</string>
 </resources>
