--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search_operation">Search movies or tv shows</string>
     <string name="a_little_empty">A little empty</string>
     <string name="a_little_empty_details">Search for a movie and \n save it as favourite</string>
+    <string name="play_trailer">Trailer</string>
 </resources>
